--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,106 @@
 body {
     background: #353535;
+    color: #fff;
+    font-family: 'Lato';
+    font-style: normal;
+    font-size: 28px;
+    font-weight: normal;
+}
+
+.workspace {
+    max-height: 700px;
+    max-width: 410px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.display {
+    margin-bottom: 6px;
+}
+
+.upperBar {
+    height: 40px;
+    display: flex;
+    align-items: center;
+    background-color: #e4e4e4;
+    margin-bottom: 6px;
+    padding: 6px;
+    border-radius: 4px;
+}
+
+.upperBar_numberOfDecimals {
+    color: #000;
+}
+
+.display_output {
+    height: 60px;
+    background-color: #e4e4e4;
+    margin-bottom: 6px;
+    padding: 6px;
+    border-radius: 5px;
+    font-size: 48px;
+    line-height: 48px;
+    text-align: right;
+    color: #000;
+}
+
+.display_formula {
+    height: 40px;
+    background-color: #e4e4e4;
+    border-radius: 5px;
+}
+
+.buttons {
+    display: grid;
+    grid-template-columns: repeat(6, 60px);
+    grid-template-rows: repeat(5, 60px);
+    gap: 6px;
+}
+
+.button {
+    padding: 8px;
+    text-align: center;
+    background-color: rgb(110, 110, 110);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    transition: all ease 0.1s;
+}
+
+.button:hover, .button:focus {
+    cursor: pointer;
+    border: solid 2px white;
+    transform: scale(1.02);
+}
+
+.button:active {
+    background-color: rgb(180, 180, 180);
+    transform: translateX(2px);
+    transform: translateY(2px);
+}
+
+.button_number {
+    background-color: rgb(150, 150, 150);
+}
+
+#button_sum, #button_solve {
+    grid-row: span 2;
+}
+
+#button_resetAll, #button_resetCalc {
+    background-color: rgb(180, 0, 0);
+}
+
+#button_sum, #button_solve {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#button_solve {
+    background-color: rgb(200, 113, 0);
+}
+
+#button_solve:active, #button_resetAll:active, #button_resetCalc:active {
+    background-color: rgb(180, 180, 180);
 }
