--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,22 @@
+:root {
+    --primary-white-dark: #e4e4e4;
+    --primary-grey-light: rgb(180, 180, 180);
+    --primary-grey-main: rgb(150, 150, 150);
+    --primary-grey-dark: rgb(110, 110, 110);
+    --primary-grey-superdark: #353535;
+    --secondary-white-main: #fff;
+    --secondary-black-main: #000;
+    --secondary-red-main: #c90c32;
+    --secondary-green-main: #00A779;
+}
+
 button {
     user-select: none;
 }
 
 body {
-    background: #353535;
-    color: #fff;
+    background: var(--primary-grey-superdark);
+    color: var(--secondary-white-main);
     font-family: 'Lato';
     font-style: normal;
     font-size: 28px;
@@ -14,7 +26,7 @@ body {
 .workspace {
     width: 500px;
     margin: 0 auto;
-    padding: 6px;
+    padding:6px;
 }
 
 .display {
@@ -26,7 +38,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #e4e4e4;
+    background-color: var(--primary-white-dark);
     margin-bottom: 6px;
     padding: 6px;
     border-radius: 4px;
@@ -48,8 +60,8 @@ body {
 
 #upperBar_currentResult {
     max-width: 50%;
-    background-color: #e4e4e4;
-    color: #000;
+    background-color: var(--primary-white-dark);
+    color: var(--secondary-black-main);
     text-align: right;
     border: none;
     padding: 1px;
@@ -60,7 +72,7 @@ body {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    background-color: #e4e4e4;
+    background-color: var(--primary-white-dark);
     border-radius: 5px;
     padding: 6px;
     margin-bottom: 6px;
@@ -68,8 +80,8 @@ body {
 
 #middleBar_result {
     width: 100%;
-    background-color: #e4e4e4;
-    color: #000;
+    background-color: var(--primary-white-dark);
+    color: var(--secondary-black-main);
     border: none;
     font-size: 46px;
     line-height: 46px;
@@ -80,7 +92,7 @@ body {
 .downBar {
     display: flex;
     width: 100%;
-    background-color: #e4e4e4;
+    background-color: var(--primary-white-dark);
     border: none;
     border-radius: 5px;
     padding: 6px;
@@ -88,8 +100,8 @@ body {
 
 #downBar_formula {
     width: 100%;
-    background-color: #e4e4e4;
-    color: #000;
+    background-color: var(--primary-white-dark);
+    color: var(--secondary-black-main);
     border: none;
     font-size: 22px;
     border-radius: 5px;
@@ -110,8 +122,8 @@ body {
 
 .button {
     text-align: center;
-    background-color: rgb(110, 110, 110);
-    color: #fff;
+    background-color: var(--primary-grey-dark);
+    color: var(--primary-white-main);
     border: none;
     border-radius: 5px;
     padding: auto 0;
@@ -125,23 +137,23 @@ body {
 }
 
 .button:active {
-    background-color: rgb(90, 90, 90);
+    opacity: 0.8;
     transform: translateX(2px);
     transform: translateY(2px);
 }
 
 .button_number {
-    background-color: rgb(150, 150, 150);
+    background-color: var(--primary-grey-main);
 }
 
 .button_number:active {
-    background-color: rgb(120, 120, 120);
+    opacity: 0.8;
 }
 
 .upperBar_memButton, #upperBar_memValue {
     align-content: flex-start;
-    background-color: #e4e4e4;
-    color: #000;
+    background-color: var(--primary-white-dark);
+    color: var(--secondary-black-main);
     font-size: 20px;
     line-height: 20px;
     padding: 6px 1px;
@@ -153,15 +165,15 @@ body {
 .upperBar_memButton {
     padding: 3px;
     margin-right: 5px;
-    background: rgb(180, 180, 180);
+    background: var(--primary-grey-light);
     transition: all ease 0.1s;
 }
 
 .button_numberOfDecimals {
     width: 40px;
     height: 30px;
-    background-color: #e4e4e4;
-    color: #000;
+    background-color: var(--primary-white-dark);
+    color: var(--secondary-black-main);
     text-align: left;
     font-size: 12px;
     line-height: 12px;
@@ -169,14 +181,14 @@ body {
     margin-right: 5px;
     border: none;
     border-radius: 4px;
-    background: rgb(180, 180, 180);
+    background: var(--primary-grey-light);
     transition: all ease 0.1s;
 }
 
 #upperBar_currentResult:focus, .upperBar_memButton:focus,
 #upperBar_memValue:focus, #middleBar_result:focus,
 #downBar_formula:focus {
-    background-color: rgb(180, 180, 180);
+    background-color: var(--primary-grey-light);
     border-radius: 4px;
 }
 
@@ -186,12 +198,12 @@ body {
 }
 
 .upperBar_memButton:focus, .button_numberOfDecimals:focus {
-    border: #000 1px solid;
+    border: solid 1px var(--secondary-black-main) ;
     transform: none;
 }
 
 .upperBar_memButton:active, .button_numberOfDecimals:active {
-    background: rgb(150, 150, 150);
+    background: var(--primary-grey-main);
 }
 
 #button_sum, .button_solve {
@@ -199,11 +211,11 @@ body {
 }
 
 .button_resetAll, .button_resetCalc {
-    background-color: #c90c32;
+    background-color: var(--secondary-red-main);
 }
 
 .button_resetAll:active, .button_resetCalc:active {
-    background-color: #a70b2a;
+    opacity: 0.8;
 }
 
 #button_sum, .button_solve {
@@ -213,15 +225,15 @@ body {
 }
 
 .button_solve {
-    background-color: #00A779;
+    background-color: var(--secondary-green-main);
 }
 
 .button_solve:active {
-    background-color: #008761;
+    opacity: 0.8;
 }
 
 input::selection {
-    background: #818181;
+    background: var(--primary-grey-dark);
 }
 
 @media (max-width: 541px) {
@@ -229,7 +241,11 @@ input::selection {
         width: 100%;
     }
 
+    .display {
+        margin-bottom: 15px;
+    }
+
     .buttons {
-        height: calc(100vh - 191px);
+        height: calc(100svh - 191px - 19px);
     }
 }
