remove default blue active effect

--- a/css/reset.css
+++ b/css/reset.css
@@ -379,3 +379,11 @@ img {
 button {
     padding: 0;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+    -webkit-tap-highlight-color: transparent;
+}
